src/styles/elements/_item-collection.css
@layer components {
    .item-collection {
        --item-collection-display: flex;
        --item-collection-flex-wrap: wrap;
        --item-collection-align-items: center;
        --item-collection-justify-content: center;
        --item-collection-gap: 0;
        --item-collection-width: var(--content-width-with-padding);
        --item-collection-max-width: var(--content-max-width);
        --item-collection-margin: var(--spacing-between-consecutive-elements-normal) auto;
        --item-collection-list-style: none;
        --item-collection-padding: 0;
        --item-collection-z-index: var(--z-index-content);
        --item-collection-item-border: var(--border-width-normal) solid var(--border-color-default);

        --item-collection-item-width: 100%;
        --item-collection-item-max-width: 100%;

        display: var(--item-collection-display);
        flex-wrap: var(--item-collection-flex-wrap);
        align-items: var(--item-collection-align-items);
        justify-content: var(--item-collection-justify-content);
        gap: var(--item-collection-gap);
        width: var(--item-collection-width);
        max-width: var(--item-collection-max-width);
        margin: var(--item-collection-margin);
        list-style: var(--item-collection-list-style);
        padding: var(--item-collection-padding);
        z-index: var(--item-collection-z-index);
    }

    .item-collection:first-child {
        --item-collection-margin: 0 auto;
    }

    .item-collection__item {
        width: var(--item-collection-item-width);
        max-width: var(--item-collection-item-max-width);
        border-bottom: var(--item-collection-item-border);
        padding: var(--item-collection-item-padding);
    }

    .item-collection__item:first-child {
        border-top: var(--item-collection-item-border);
    }

    @media screen and (min-width: 640px) {
        .item-collection {
            --item-collection-item-padding: 0;
        }
    }
}

